Fix spacing under top bar

--- a/Frontend/src/app/components/cart-details/cart-details.component.scss
+++ b/Frontend/src/app/components/cart-details/cart-details.component.scss
@@ -1,3 +1,7 @@
+.align-top {
+  margin-top: 65px;
+}
+
 .btn-decrement {
   width: 40px;
   height: 40px;
