--- a/Frontend/src/app/components/order-list/order-list.component.scss
+++ b/Frontend/src/app/components/order-list/order-list.component.scss
@@ -17,3 +17,7 @@ thead {
     border-bottom: 3px solid #f2e8df;
   }
 }
+
+.align-top {
+  margin-top: 65px;
+}
