--- a/Frontend/src/app/components/product/add-product/add-product.component.scss
+++ b/Frontend/src/app/components/product/add-product/add-product.component.scss
@@ -1,3 +1,7 @@
+.align-top {
+  margin-top: 65px;
+}
+
 .dropbtn {
   background-color: white;
   color: black;
