--- a/Frontend/src/app/components/product/edit-product/edit-product.component.scss
+++ b/Frontend/src/app/components/product/edit-product/edit-product.component.scss
@@ -3,6 +3,9 @@
   text-align: center;
   color: #333;
 }
+.align-top {
+  margin-top: 65px;
+}
 
 .btn-update {
   width: 180px;
