--- a/Frontend/src/app/components/product/product-list/product-list.component.scss
+++ b/Frontend/src/app/components/product/product-list/product-list.component.scss
@@ -1,3 +1,7 @@
+.align-top {
+  margin-top: 65px;
+}
+
 .btn-add {
   width: 180px;
   height: 50px;
@@ -43,6 +47,7 @@
     }
   }
 }
+
 .active-link {
   color: #ff3c00;
 }
